--- a/IndexEntradaNOSOCIO.html
+++ b/IndexEntradaNOSOCIO.html
@@ -30,14 +30,14 @@
         button {
             width: 100%;
             padding: 10px;
-            background-color: #cccf04;
+            background-color: #ffbe0b;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
-            background-color: #ebf83a;
+            background-color: #f8d53a;
         }
         .error {
             color: red;
