--- a/GenerarEntradaNOsocio.html
+++ b/GenerarEntradaNOsocio.html
@@ -32,7 +32,7 @@
             border: none;
             cursor: pointer;
             font-size: 16px;
-            font-weight: bold;
+            font-weight: bold; 
             transition: background 0.3s, transform 0.2s;
         }
         .option:hover {
@@ -49,7 +49,7 @@
         <!--Inicio de Banner-->
         <div class="banner">
             <a href="./IndexMitre.html"><img src="./Mitre_escudo.png" alt="Logo"></a>
-            <h1>Club Atlético Mitre (Sde.) | Gracias por ser socio.</h1>
+            <h1 style="font-size: 11px;">Club Atlético Mitre (Sde.) | Gracias por ser socio.</h1>
         </div>
         <!--Fin de Banner-->
 
